--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="warning">Number 1 - I'm a class!</p>
-    <div id="big-blue">Number 2 - I'm one ID.</div>
-    <p class="warning important">Number 3 - I'm a class, but cooler!</p>
-    <div id="success">Number 4 - I'm another ID.</div>
-    <p class="warning">Number 5 - I'm a class!</p>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="odd medium-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="four" class="medium-font-size">Number 4 - I'm another ID.</div>
+    <p class="odd">Number 5 - I'm a class!</p>
   </body>
 </html>
